--- a/email_templates/verification.handlebars
+++ b/email_templates/verification.handlebars
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Potvrzeni Uctu</title>
 </head>
 <body>
 
 <h1>Ahoj {{name}}! </h1>
-<p>Tvuj kod je : {{verification}} </p>
+<h1>Tvuj kod je: {{verification}} </h1>
 <p>Klikni sem a zadej ho {{URL}}. </p>
 
  
