--- a/email_templates/verification.handlebars
+++ b/email_templates/verification.handlebars
@@ -7,8 +7,7 @@
 <body>
 
 <h1>Ahoj {{name}}! </h1>
-<h1>Tvuj kod je: {{verification}} </h1>
-<p>Klikni sem a zadej ho {{URL}}. </p>
+<p>Klikni sem {{URL}}. </p>
 
  
 
