--- a/email_templates/verification.handlebars
+++ b/email_templates/verification.handlebars
@@ -7,7 +7,8 @@
 <body>
 
 <h1>Ahoj {{name}}! </h1>
-<p>Klikni sem {{URL}}. </p>
+<p>Klikni sem aby jsi se overil </p>
+<a href="{{URL}}">Overit</a>
 
  
 
