--- a/email_templates/verification.handlebars
+++ b/email_templates/verification.handlebars
@@ -1,16 +1,34 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-</head>
-<body>
 
-<h1>Ahoj {{name}}! </h1>
-<p>Klikni sem aby jsi se overil </p>
-<a href="{{URL}}">Overit</a>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="x-ua-compatible" content="ie=edge" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;1,400&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
 
- 
+	<body>
+		<style>
+			* { margin: 0; padding: 5px; box-sizing: border-box; font-family:
+			'Poppins', sans-serif; } .button { text-decoration: none;
+			background-color: #4CAF50; border: none; color: white; padding: 20px 50px;
+			border-radius: 1.5rem; text-align: center; display: inline-block;
+			font-size: 16px; justify-content: center; align-items: center; } .center {
+			display: flex; justify-content: center; align-items: center; } a { color:
+			white; font-size: 25px; font-weight: bold; } p { font-size: 1.5rem;
+			text-align: center; }
+		</style>
 
-</body>
+		<p>Klikni sem aby jsi se ověřil </p>
+
+		<div class="center">
+			<a style="text-decoration:none" class="button" href="{{URL}}">Ověřit</a>
+		</div>
+
+	</body>
+
 </html>
