--- a/email_templates/password_reset.handlebars
+++ b/email_templates/password_reset.handlebars
@@ -23,10 +23,10 @@
 			text-align: center; }
 		</style>
 
-		<p>Klikni sem aby jsi se ověřil/a </p>
+		<p>Klikni sem aby jsi změnil heslo </p>
 
 		<div class="center">
-			<a style="text-decoration:none" class="button" href="{{URL}}">Ověřit</a>
+			<a style="text-decoration:none" class="button" href="{{URL}}">Změnit</a>
 		</div>
 
 	</body>
