--- a/frontend/src/pages/password_reset/_nadpisy.scss
+++ b/frontend/src/pages/password_reset/_nadpisy.scss
@@ -79,6 +79,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin-bottom: 0px !important;
+    margin-top: -30px !important;
+    margin-left: 0px !important;
   }
 
   .Nadpis_Stranky3_res {
