--- a/frontend/src/pages/email_responses/user_verified/_div.scss
+++ b/frontend/src/pages/email_responses/user_verified/_div.scss
@@ -2,8 +2,8 @@
   padding: 40px;
   border-radius: 20px;
   background: #d9d9d9;
-  width: 60vw;
-  height: 580px;
+  width: 500px;
+  height: 300px;
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
