--- a/frontend/src/pages/email_responses/user_verified/_texty.scss
+++ b/frontend/src/pages/email_responses/user_verified/_texty.scss
@@ -1,4 +1,4 @@
-.text_log {
+.text_verify {
   color: #000;
   text-align: center;
   font-family: Inter;
@@ -18,7 +18,7 @@
 
 
 @media only screen and (max-width: 640px) {
-  .text_log {
+  .text_verify {
     color: #000;
     text-align: center;
     font-family: Inter;
@@ -39,7 +39,7 @@
   
 
 @media only screen and (max-width: 480px) {
-  .text_log {
+  .text_verify {
     color: #000;
     text-align: center;
     font-family: Inter;
