--- a/frontend/src/pages/email_responses/user_verified/_input.scss
+++ b/frontend/src/pages/email_responses/user_verified/_input.scss
@@ -1,4 +1,4 @@
-.inputclass_log {
+.inputclass_verify {
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   border-radius: 20px;
@@ -8,7 +8,7 @@
 }
 
 @media only screen and (max-width: 640px) {
-  .inputclass_log {
+  .inputclass_verify {
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     border-radius: 20px;
@@ -19,7 +19,7 @@
 }
 
 @media only screen and (max-width: 480px) {
-  .inputclass_log {
+  .inputclass_verify {
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     border-radius: 20px;
