--- a/frontend/src/pages/email_responses/user_verified/_nadpisy.scss
+++ b/frontend/src/pages/email_responses/user_verified/_nadpisy.scss
@@ -1,4 +1,4 @@
-.Nadpis_Stranky1_log {
+.Nadpis_Stranky1_verify {
   color: #000;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -8,7 +8,7 @@
   line-height: normal;
 }
 
-.Nadpis_Stranky2_log {
+.Nadpis_Stranky2_verify {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -22,7 +22,7 @@
   line-height: normal;
 }
 
-.Nadpis_Stranky3_log {
+.Nadpis_Stranky3_verify {
   color: #000;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -33,7 +33,7 @@
 }
 
 @media only screen and (max-width: 640px) {
-  .Nadpis_Stranky1_log {
+  .Nadpis_Stranky1_verify {
     color: #000;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -43,7 +43,7 @@
     line-height: normal;
   }
 
-  .Nadpis_Stranky2_log {
+  .Nadpis_Stranky2_verify {
     color: #000;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -53,7 +53,7 @@
     line-height: normal;
   }
 
-  .Nadpis_Stranky3_log {
+  .Nadpis_Stranky3_verify {
     color: #000;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -65,7 +65,7 @@
 }
 
 @media only screen and (max-width: 480px) {
-  .Nadpis_Stranky1_log {
+  .Nadpis_Stranky1_verify {
     color: #000;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -75,7 +75,7 @@
     line-height: normal;
   }
 
-  .Nadpis_Stranky2_log {
+  .Nadpis_Stranky2_verify {
     color: #000;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -85,7 +85,7 @@
     line-height: normal;
   }
 
-  .Nadpis_Stranky3_log {
+  .Nadpis_Stranky3_verify {
     color: #000;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
