--- a/frontend/src/pages/password_reset/_div.scss
+++ b/frontend/src/pages/password_reset/_div.scss
@@ -2,8 +2,8 @@
   padding: 40px;
   border-radius: 20px;
   background: #d9d9d9;
-  width: 500px;
-  height: 800px;
+  width: 60vw;
+  height: 600px;
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
