--- a/frontend/src/pages/registration/_input.scss
+++ b/frontend/src/pages/registration/_input.scss
@@ -5,7 +5,21 @@
   background: #c5c2c2;
   border-color: rgba(0, 255, 255, 0);
   height: 40px;
+  padding: 20px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  select
+{
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    appearance: none !important;
+    padding-left: 10px !important;
 }
+ 
+}
+
+
 
 @media only screen and (max-width: 1700px) {
   .inputclass_reg {
