--- a/frontend/src/pages/home_page/_div.scss
+++ b/frontend/src/pages/home_page/_div.scss
@@ -2,38 +2,42 @@
 {
     display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: left;
   width: 100%;
+  height: 100%;
 }
 
 .divcat
 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 20%;
-}
-
-.divproductpage
-{
-    border:  1px solid red;
     height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    width: 20%;
+    overflow: hidden ;
+}
+
+.divproductspage2
+{
+    background-color: red !important;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     width: 80%;
 }
 
 .divproduct
 {
-    
+    border-style: solid;
     background: #B99470;
     display: flex;
     flex-direction: row;
     align-items: left;
     justify-content: left;
-    width: 100%;
+    height: 20%;
+    width: 200px;
 }
