--- a/frontend/src/pages/home_page/_div.scss
+++ b/frontend/src/pages/home_page/_div.scss
@@ -1,43 +1,92 @@
-.divhome
-{
-    display: flex;
+.divhome {
+  display: flex;
   flex-direction: row;
   justify-content: left;
   width: 100%;
   height: 100%;
 }
 
-.divcat
-{
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 20%;
-    overflow: hidden ;
+.divcat {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 20%;
+  overflow: hidden;
+  margin-right: 1vw;
 }
 
-.divproductspage2
-{
-    background-color: red !important;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 80%;
+.divproductspage2 {
+  background-color: #dddada !important;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 80%;
 }
 
-.divproduct
-{
-    border-style: solid;
-    background: #B99470;
+.divproduct {
+  border-style: solid;
+  background: #b99470;
+  //display: flex;
+  flex-direction: row;
+  align-items: left;
+  justify-content: left;
+  height: 20%;
+  width: 300px;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  overflow: hidden;
+
+  .divproduct_img {
     display: flex;
-    flex-direction: row;
-    align-items: left;
-    justify-content: left;
-    height: 20%;
-    width: 200px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50%;
+
+    img {
+      height: 150px;
+      width: auto;
+      object-fit: contain;
+      -webkit-object-fit: contain;
+      -moz-object-fit: contain;
+      -o-object-fit: contain;
+    }
+  }
+
+  .divproduct_rating {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 5%;
+  }
+
+  .divproduct_name {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 10%;
+  }
+
+  .divproduct_price {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 15%;
+  }
+
+  .divproduct_add {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 30%;
+  }
 }
