--- a/frontend/src/pages/home_page/_div.scss
+++ b/frontend/src/pages/home_page/_div.scss
@@ -1,92 +1,115 @@
 .divhome {
-  display: flex;
-  flex-direction: row;
-  justify-content: left;
-  width: 100%;
-  height: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: left;
+	width: 100%;
+	height: 100%;
 }
 
 .divcat {
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 20%;
-  overflow: hidden;
-  margin-right: 1vw;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	width: 20%;
+	overflow: hidden;
+	margin-right: 1vw;
 }
 
 .divproductspage2 {
-  background-color: #dddada !important;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 80%;
+	//background-color: #dddada !important;
+	border-radius: 20px;
+	display: inline-grid;
+	row-gap: 2%;
+	column-gap: 2%;
+	grid-template-columns: 22% 22% 22% 22%;
+	justify-content: space-evenly;
+	align-items: center;
+	width: 80%;
+	height: fit-content;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .divproduct {
-  border-style: solid;
-  background: #b99470;
-  //display: flex;
-  flex-direction: row;
-  align-items: left;
-  justify-content: left;
-  height: 20%;
-  width: 300px;
-  margin-left: 2vw;
-  margin-right: 2vw;
-  overflow: hidden;
+	display: grid;
+	height: fit-content;
+	grid-template-columns: 90%;
+	grid-template-rows: 50% 10% 10% 10% 10%;
+	justify-content: space-evenly;
+	row-gap: 2%;
+	padding-top: 2%;
+	background-color: #dddada;
+	border-radius: 20px;
 
-  .divproduct_img {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 50%;
+	.divproduct_img {
+		overflow: hidden;
+		grid-row: 1;
+		text-align: center;
 
-    img {
-      height: 150px;
-      width: auto;
-      object-fit: contain;
-      -webkit-object-fit: contain;
-      -moz-object-fit: contain;
-      -o-object-fit: contain;
-    }
-  }
+		display: inline-block;
 
-  .divproduct_rating {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 5%;
-  }
+		img {
+			height: 300px;
+			border-radius: 20px;
+			width: auto;
+			object-fit: contain;
+			-webkit-object-fit: contain;
+			-moz-object-fit: contain;
+			-o-object-fit: contain;
+		}
+	}
 
-  .divproduct_name {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 10%;
-  }
+	.divproduct_rating {
+		grid-row: 2;
+		text-align: center;
+    color: black;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: bolder;
+    line-height: normal;
+    margin-top: -5% !important; 
+    
+	}
 
-  .divproduct_price {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 15%;
-  }
+	.divproduct_name {
+		grid-row: 3;
+		text-align: center;
+		color: black;
+		font-weight: bold;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 20px;
+		font-style: normal;
+		font-weight: bolder;
+		line-height: normal;
+    margin-top: -10% !important; 
+	}
 
-  .divproduct_add {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 30%;
-  }
+	.divproduct_price {
+		grid-row: 4;
+		text-align: center;
+		color: black;
+		font-weight: bold;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 25px;
+		font-style: normal;
+		font-weight: bolder;
+		line-height: normal; 
+	}
+
+	.divproduct_add {
+		grid-row: 5;
+		background-color: #5f6f52;
+		text-align: center;
+		border-radius: 20px;
+		color: white;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 18px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: normal;
+	}
 }
