--- a/frontend/src/pages/products/single_product/_div.scss
+++ b/frontend/src/pages/products/single_product/_div.scss
@@ -11,15 +11,15 @@ border-radius: 20px;
 
     border-radius: 20px;
     display: grid;
-    grid-template-columns: auto 60% ;
+    grid-template-columns: 58% 38%;
     background-color: #D9D9D9;
     padding: 2%;
     margin: 2%;
 
     img {
-        height: 600px;
         border-radius: 20px;
-        width: auto;
+        width: 90%;
+        padding: 5px;
         object-fit: contain;
         -webkit-object-fit: contain;
         -moz-object-fit: contain;
@@ -27,42 +27,103 @@ border-radius: 20px;
     }   
     
     .productImg{
+        padding:1%;
+
         display: grid;
         grid-area: 1 / 1 / 8 / 2 ;
         
     }
     
     .productName{
+        padding:1%;
         display: grid;
         grid-area: 1 / 2 / 2 / 4 ;
         text-align: left;
+        .productNameText{
+            font-size: 3vw;
+            padding-bottom: 2vw;
+        }
     }
     
     .productDesc{
+        padding:1%;
         display: grid;
-        grid-area: 2 / 2 / 2 / 4 ;
+        grid-area: 3 / 2;
+        .productDescText{
+            font-size: 1.5vw;
+            word-spacing: 1.1px;
+        }
     }
     .productPrice{
+        padding:1%;
         display: grid;
-        grid-area: 4 / 2 / 3 / 4 ;
+        grid-area: 6 / 2;
+        text-align: right;
+        .productPriceText{
+            font-size: 2vw;
+            font-weight: 600;
+            
+        }
 
     }
     .productCat{
+        padding:1%;
         display: grid;
-        grid-area: 4 / 2 / 4 / 4 ;
+        grid-area: 2 / 2 ;
+        .productCatText{
+            font-size: 1.7vw;
+            font-weight: 600;
+        }
+    }
+
+    .productRating{
+        padding:1%;
+        display: grid;
+        padding-top: 1vw;
+        grid-area: 4 / 2 ;
+        .productRatingText{
+            font-size: 1.3vw;
+            font-weight: 600;
+        }
+        .productRatingStarts{
+            font-size: 2vw;
+            letter-spacing: 2px;
+        }
+    }
+    .productToCart{
+        background-color: #a5a5a5;
+        display: grid;
+        grid-area: 7 / 2 ;
+        width: 20%;
+        margin-left: 80%;
+        z-index: 10;
+        border-radius: 20px;
+        align-items: center;
+        margin-top: 1vw;
+
+    }
+    .addToCartText{
+        text-align: center;
+        font-size: 1.2vw;
+        font-family: Arial;
+        font-weight: 600;
+        padding: 1.5vw 0 1.5vw 0;
+    }
+    .productToCart:hover{
+        cursor: pointer;
     }
     .productAmount{
+        padding-top: 2vw;
+        padding:1%;
         display: grid;
-        grid-area: 5 / 2 / 5 / 4 ;
-    }
-    .productRating{
-        display: grid;
-        grid-area: 6 / 2 / 6 / 4 ;
-    }
-    
-    .productStat{
-        display: grid;
-        grid-area: 7 / 2 / 7 / 4 ;
+        grid-area: 7 / 2;
+        justify-content: flex-start;
+        align-content: center;
+        align-items: center;
+        .productAmountText{
+            font-size: 1.3vw;
+            font-weight: 500;
+        }
     }
 
 }
