--- a/frontend/src/pages/products/single_product/_text.scss
+++ b/frontend/src/pages/products/single_product/_text.scss
@@ -6,15 +6,16 @@
 .productNameText{
     font-family: Inter;
   color: #000;
-  font-size: 18px;
+  font-size: 28px;
   font-style: normal;
   font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 .productDescText{
     font-family: Inter;
   color: #000;
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
   font-family: Arial, Helvetica, sans-serif;
 }
