--- a/frontend/src/components/navbar/_searchbar.scss
+++ b/frontend/src/components/navbar/_searchbar.scss
@@ -1,14 +1,26 @@
+body{
+  background-color: #FEFAE0;
+}
 .navbar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-start;
+  box-shadow:  inset 10px 20px 60px #8ea37c8f, 0px 0px 0px 2px black;
+  margin: -8px;
+  margin-bottom: 0.5vw;
+  padding-top: 2vh;
+  padding: 1vh;
+  background-color: #B99470;
 }
-
 .div_img {
   display: flex;
   align-items: end;
   height: 100px;
-  width: 33%;
+  width: 33vh;
+}
+.hamburger{
+  height: 50px;
 }
 
 .img {
@@ -17,29 +29,30 @@
 }
 
 .topnav {
-  width: 33%;
+  width: 30vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
-
+  align-self: center;
   input {
     width: 90%;
     border-radius: 20px;
-    height: 30%;
+    height: 4vh;
     padding-left: 10px;
-    background: #c5c2c2;
+    background: #f7f7f7;
+
     
   }
 }
 
 .div_user {
-  width: 33%;
+  width: 33vh;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   justify-content: center;
+  align-self: center;
 }
 
 .uil-shopping-basket {
@@ -55,12 +68,8 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding-left: 20%;
-  
-}
-
-.okkkkk {
-  padding-right: 20%;
+  margin-left: 3vw;
+  margin-right: 3vw;
 }
 
 .text1 {
@@ -69,4 +78,87 @@
   font-size: 18px;
   font-style: normal;
   font-family: Arial, Helvetica, sans-serif;
+}
+@media only screen and (max-width: 500px) {
+  .navbar {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-auto-flow: column;
+    flex-direction: column;
+    justify-content: space-between;
+    justify-items: start;
+    align-items: center;
+    padding: 1vw;
+    align-items: flex-start;
+
+
+  }
+  .hamburger{
+    display: flex;
+  }
+  .uil-user-circle{
+    display: none;
+  }
+
+  .div_user {
+    width: 0;
+  }
+  .div_img {
+    align-self: center;
+    grid-column: 1;
+    align-items: end;
+    height: 10vh;
+    width: 33%;
+    padding-bottom: 3vw;
+  }
+  .div_user {
+    display: flex;
+    width: 33vh;
+    grid-column: 2;
+    grid-column-end: auto;
+    flex-direction: column-reverse;
+    .uil-shopping-basket{
+      display: none;
+      :hover{
+        cursor: pointer;
+        
+      }
+    }
+
+  }
+  .topnav {
+    display: none;
+    grid-column: 2;
+    flex-direction: column;
+    align-self: center;
+    justify-content: center;
+  }
+  .text1{
+    display: none;
+  }
+}
+
+
+@media only screen and (min-width: 501px) {
+  .hamburger{
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+.div_user{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-right: 5%;
+  width: 1/3;
+}
+.divokys{
+  display: none;
+
+}
+.uil-user-circle{
+  margin-left: 2vw;
+}
+
 }
