--- a/frontend/src/pages/products/single_product/_div.scss
+++ b/frontend/src/pages/products/single_product/_div.scss
@@ -2,33 +2,42 @@
 display: flex;
 flex-direction: row;
 justify-content: left;
-width: 100%;
-background-color: #D9D9D9;
-border-radius: 20px;
+background-color: #5F6F52;
+
+margin-left: -8px;
+margin-right: -8px;
+padding: 0.4vw;
+padding-left: 8vh;
+font-family: Arial, Helvetica, sans-serif;
+
+box-shadow: 0px 0px 0px 2px #dfd1d1;
+a{
+    color: white;
+    font-weight: 600;
+}
 }
 
 .divproduct1{
 
-    border-radius: 20px;
     display: grid;
     grid-template-columns: 58% 38%;
-    background-color: #D9D9D9;
+    background-color: #A9B388;
     padding: 2%;
-    margin: 2%;
-
+    margin: 0 2% 0 2%;
+    border-radius: 0 0 5vw 5vw;
+    box-shadow: inset 0px 0px 50px 80px #95a16c;
     img {
         border-radius: 20px;
         width: 90%;
-        padding: 5px;
         object-fit: contain;
         -webkit-object-fit: contain;
         -moz-object-fit: contain;
         -o-object-fit: contain;
+
     }   
     
     .productImg{
         padding:1%;
-
         display: grid;
         grid-area: 1 / 1 / 8 / 2 ;
         
@@ -91,7 +100,8 @@ border-radius: 20px;
         }
     }
     .productToCart{
-        background-color: #a5a5a5;
+        background-color: #5F6F52;
+        color: white;
         display: grid;
         grid-area: 7 / 2 ;
         width: 20%;
@@ -127,4 +137,130 @@ border-radius: 20px;
     }
 
 }
+.otherProductsText{
+    font-family: "Arial";
+    margin: 0 6vw 1vw 6vw;
 
+}
+.otherProductsItem{
+    flex-basis: 100%;
+}
+.otherProducts{
+    display: flex;
+    margin: 0 6vw 0 6vw;
+    gap: 1vw;
+    .otherProductsItem{
+    display: grid;
+
+	height: fit-content;
+	grid-template-columns: 90%;
+	grid-template-rows: 50% 10% 10% 10% 10%;
+	justify-content: space-evenly;
+	padding-top: 2%;
+	background-color: #dddada;
+	border-radius: 20px;
+
+    p{
+        margin: 1.5vw;
+    }
+	.divproduct_img {
+		overflow: hidden;
+		grid-row: 1;
+        height: 20vw;
+        width: 20vw;
+		img {
+			height: 20vw;
+			width: 20vw;
+            object-fit: cover;
+            margin-left: -2vw;
+		}
+	}
+
+	.divproduct_rating {
+		grid-row: 3;
+		text-align: center;
+    color: black;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2vw;
+    font-style: normal;
+    font-weight: bolder;
+    line-height: normal;
+    
+	}
+
+	.divproduct_name {
+		grid-row: 2;
+		text-align: center;
+		color: black;
+		font-weight: bold;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 20px;
+		font-style: normal;
+		font-weight: bolder;
+		line-height: normal;
+	}
+
+	.divproduct_price {
+		grid-row: 4;
+		text-align: center;
+		color: black;
+		font-weight: bold;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 25px;
+		font-style: normal;
+		font-weight: bolder;
+		line-height: normal; 
+	}
+
+	.divproduct_add {
+		grid-row: 5;
+		background-color: #5f6f52;
+		text-align: center;
+		border-radius: 20px;
+		color: white;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 18px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: normal;
+        margin-top: 0vw;
+    }
+}
+
+
+
+
+
+}
+@media only screen and (max-width: 1000px) {
+    .otherProducts{
+        flex-wrap: 2;
+    }
+
+}
+
+
+@media only screen and (max-width: 500px) {
+    .divproduct1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        zoom: 2;
+        .productName{
+            align-self: flex-start;
+        }
+        .productDesc, .productCat, .productRating, .productAmount, .productPrice{
+            align-self: flex-start;
+        }
+        .productToCart{
+            align-self: center;
+            margin-left: 0;
+        }
+
+    }
+    .divnav{
+        padding-left: 4vh;
+    }
+
+}
