--- a/frontend/src/components/footer/_footer.scss
+++ b/frontend/src/components/footer/_footer.scss
@@ -1,9 +1,8 @@
 .divfoot{
 background-color: yellow;
-position: fixed;
-bottom: 0;
-left: 0;
+padding-bottom: 2rem;
 text-align: center;
 width: 100%;
+
 
 }
