--- a/frontend/src/pages/home_page/_div.scss
+++ b/frontend/src/pages/home_page/_div.scss
@@ -3,7 +3,8 @@
 	flex-direction: row;
 	justify-content: left;
 	width: 100%;
-	height: 100%;
+	height: 4000px !important;
+	padding-bottom: 25rem;
 }
 
 .divcat {
@@ -17,8 +18,7 @@
 	margin-right: 1vw;
 }
 
-.divproductspage2 {
-	//background-color: #dddada !important;
+.div_products_page2 {
 	border-radius: 20px;
 	display: inline-grid;
 	row-gap: 2%;
@@ -27,89 +27,74 @@
 	justify-content: space-evenly;
 	align-items: center;
 	width: 80%;
-	height: fit-content;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	height: auto !important;
 }
 
-.divproduct {
-	display: grid;
-	height: fit-content;
-	grid-template-columns: 90%;
-	grid-template-rows: 50% 10% 10% 10% 10%;
-	justify-content: space-evenly;
-	row-gap: 2%;
-	padding-top: 2%;
-	background-color: #dddada;
-	border-radius: 20px;
+.divproduct_img {
+	overflow: hidden;
+	grid-row: 1;
+	text-align: center;
 
-	.divproduct_img {
-		overflow: hidden;
-		grid-row: 1;
-		text-align: center;
+	display: inline-block;
 
-		display: inline-block;
-
-		img {
-			height: 300px;
-			border-radius: 20px;
-			width: auto;
-			object-fit: contain;
-			-webkit-object-fit: contain;
-			-moz-object-fit: contain;
-			-o-object-fit: contain;
-		}
-	}
-
-	.divproduct_rating {
-		grid-row: 2;
-		text-align: center;
-    color: black;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: bolder;
-    line-height: normal;
-    margin-top: -5% !important; 
-    
-	}
-
-	.divproduct_name {
-		grid-row: 3;
-		text-align: center;
-		color: black;
-		font-weight: bold;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 20px;
-		font-style: normal;
-		font-weight: bolder;
-		line-height: normal;
-    margin-top: -10% !important; 
-	}
-
-	.divproduct_price {
-		grid-row: 4;
-		text-align: center;
-		color: black;
-		font-weight: bold;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 25px;
-		font-style: normal;
-		font-weight: bolder;
-		line-height: normal; 
-	}
-
-	.divproduct_add {
-		grid-row: 5;
-		background-color: #5f6f52;
-		text-align: center;
+	img {
+		height: 300px;
 		border-radius: 20px;
-		color: white;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 18px;
-		font-style: normal;
-		font-weight: 400;
-		line-height: normal;
+		width: auto;
+		object-fit: contain;
+		-webkit-object-fit: contain;
+		-moz-object-fit: contain;
+		-o-object-fit: contain;
 	}
+}
+
+.divproduct_rating {
+	grid-row: 2;
+	text-align: center;
+	color: black;
+	font-weight: bold;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: bolder;
+	line-height: normal;
+	margin-top: -5% !important;
+}
+
+.divproduct_name {
+	grid-row: 3;
+	text-align: center;
+	color: black;
+	font-weight: bold;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 20px;
+	font-style: normal;
+	font-weight: bolder;
+	line-height: normal;
+	margin-top: -10% !important;
+}
+
+.divproduct_price {
+	grid-row: 4;
+	text-align: center;
+	color: black;
+	font-weight: bold;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 25px;
+	font-style: normal;
+	font-weight: bolder;
+	line-height: normal;
+}
+
+.divproduct_add {
+	grid-row: 5;
+	background-color: #5f6f52;
+	text-align: center;
+	border-radius: 20px;
+	color: white;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
 }
