--- a/frontend/src/pages/home_page/_div.scss
+++ b/frontend/src/pages/home_page/_div.scss
@@ -3,7 +3,7 @@
 	flex-direction: row;
 	justify-content: left;
 	width: 100%;
-	height: 4000px !important;
+	height: fit-content;
 	padding-bottom: 25rem;
 }
 
@@ -34,6 +34,7 @@
 	overflow: hidden;
 	grid-row: 1;
 	text-align: center;
+	justify-content: center;
 
 	display: inline-block;
 
@@ -97,4 +98,63 @@
 	font-style: normal;
 	font-weight: 400;
 	line-height: normal;
+}
+
+@media only screen and (max-width: 1350px) {
+	.divhome {
+		.div_products_page2 {
+			border-radius: 20px;
+			display: inline-grid;
+			row-gap: 2%;
+			column-gap: 2%;
+			grid-template-columns: 29% 29% 29%;
+			justify-content: space-evenly;
+			align-items: center;
+			width: 80%;
+			height: auto !important;
+		}
+	}
+}
+
+@media only screen and (max-width: 992px) {
+	.divhome {
+		.divcat {
+			display: none;
+		}
+		.div_products_page2 {
+			border-radius: 20px;
+			display: inline-grid;
+			row-gap: 2%;
+			column-gap: 2%;
+			grid-template-columns: 44% 44%;
+			justify-content: space-evenly;
+			align-items: center;
+			width: 80%;
+			height: auto !important;
+		}
+	}
+}
+
+@media only screen and (max-width: 700px) {
+	.div_products_page2 {
+		border-radius: 20px;
+		display: inline-grid;
+		row-gap: 2%;
+		column-gap: 2%;
+		grid-template-columns: 100%;
+		justify-content: space-evenly;
+		align-items: center;
+		width: 60%;
+		height: auto !important;
+	}
+	.divcat {
+		height: fit-content;
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		width: 30%;
+		overflow: hidden;
+		margin-right: 1vw;
+	}
 }
