--- a/frontend/src/pages/home_page/_div.scss
+++ b/frontend/src/pages/home_page/_div.scss
@@ -4,30 +4,40 @@
 	justify-content: left;
 	width: 100%;
 	height: fit-content;
-	padding-bottom: 25rem;
 }
 
 .divcat {
-	height: 100%;
+	height: fit-content;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
 	width: 20%;
 	overflow: hidden;
-	margin-right: 1vw;
 }
 
 .div_products_page2 {
 	border-radius: 20px;
 	display: inline-grid;
-	row-gap: 2%;
 	column-gap: 2%;
 	grid-template-columns: 22% 22% 22% 22%;
 	justify-content: space-evenly;
 	align-items: center;
 	width: 80%;
-	height: auto !important;
+	height: fit-content;
+}
+
+.divproduct {
+	display: grid;
+	height: fit-content;
+	grid-template-columns: 90%;
+	grid-template-rows: 50% 10% 10% 10% 10%;
+	justify-content: space-evenly;
+	row-gap: 2%;
+	padding-top: 2%;
+	background-color: #dddada;
+	border-radius: 20px;
+	margin-bottom: 10%;
 }
 
 .divproduct_img {
@@ -35,17 +45,20 @@
 	grid-row: 1;
 	text-align: center;
 	justify-content: center;
+	height: 400px;
+	border-radius: 20px;
+	display: flex;
 
-	display: inline-block;
-
-	img {
-		height: 300px;
+	.imgh {
+		height: 250px;
 		border-radius: 20px;
 		width: auto;
 		object-fit: contain;
 		-webkit-object-fit: contain;
 		-moz-object-fit: contain;
 		-o-object-fit: contain;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
 
@@ -53,33 +66,30 @@
 	grid-row: 2;
 	text-align: center;
 	color: black;
-	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 18px;
 	font-style: normal;
 	font-weight: bolder;
 	line-height: normal;
-	margin-top: -5% !important;
+	padding-top: 5%;
 }
 
 .divproduct_name {
 	grid-row: 3;
 	text-align: center;
 	color: black;
-	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 20px;
 	font-style: normal;
 	font-weight: bolder;
 	line-height: normal;
-	margin-top: -10% !important;
+	padding-top: 5%;
 }
 
 .divproduct_price {
 	grid-row: 4;
 	text-align: center;
 	color: black;
-	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 25px;
 	font-style: normal;
@@ -90,7 +100,6 @@
 .divproduct_add {
 	grid-row: 5;
 	background-color: #5f6f52;
-	text-align: center;
 	border-radius: 20px;
 	color: white;
 	font-family: Arial, Helvetica, sans-serif;
@@ -98,56 +107,49 @@
 	font-style: normal;
 	font-weight: 400;
 	line-height: normal;
+	display: table;
+
+	.textadd {
+		font-size: 22px;
+		text-align: center;
+		vertical-align: middle;
+		display: table-cell;
+		font-weight: bold;
+	}
+}
+
+.divproduct_add :hover {
+	background: #5f6f52;
+	background: linear-gradient(0deg, #4b5543 0%, #49573c 100%);
+	border-radius: 20px;
 }
 
 @media only screen and (max-width: 1350px) {
-	.divhome {
-		.div_products_page2 {
-			border-radius: 20px;
-			display: inline-grid;
-			row-gap: 2%;
-			column-gap: 2%;
-			grid-template-columns: 29% 29% 29%;
-			justify-content: space-evenly;
-			align-items: center;
-			width: 80%;
-			height: auto !important;
-		}
+	.div_products_page2 {
+		grid-template-columns: 29% 29% 29%;
 	}
 }
 
 @media only screen and (max-width: 992px) {
-	.divhome {
-		.divcat {
-			display: none;
-		}
-		.div_products_page2 {
-			border-radius: 20px;
-			display: inline-grid;
-			row-gap: 2%;
-			column-gap: 2%;
-			grid-template-columns: 44% 44%;
-			justify-content: space-evenly;
-			align-items: center;
-			width: 100%;
-			height: auto !important;
-		}
+	.divcat {
+		display: none;
+	}
+	.div_products_page2 {
+		grid-template-columns: 44% 44%;
+		justify-content: space-evenly;
+		align-items: center;
+		width: 100%;
 	}
 }
 
 @media only screen and (max-width: 600px) {
-	
-	.divhome {
-		.div_products_page2 {
-		border-radius: 20px;
-		display: inline-grid;
-		row-gap: 2%;
-		column-gap: 2%;
+	.divcat {
+		display: none;
+	}
+	.div_products_page2 {
 		grid-template-columns: 90%;
 		justify-content: space-evenly;
 		align-items: center;
 		width: 100%;
-		height: auto !important;
 	}
-}
 }
