--- a/frontend/src/pages/products/single_product/_div.scss
+++ b/frontend/src/pages/products/single_product/_div.scss
@@ -1,266 +1,248 @@
-.divnav{
-display: flex;
-flex-direction: row;
-justify-content: left;
-background-color: #5F6F52;
-
-margin-left: -8px;
-margin-right: -8px;
-padding: 0.4vw;
-padding-left: 8vh;
-font-family: Arial, Helvetica, sans-serif;
-
-box-shadow: 0px 0px 0px 2px #dfd1d1;
-a{
-    color: white;
-    font-weight: 600;
-}
-}
-
-.divproduct1{
-
-    display: grid;
-    grid-template-columns: 58% 38%;
-    background-color: #A9B388;
-    padding: 2%;
-    margin: 0 2% 0 2%;
-    border-radius: 0 0 5vw 5vw;
-    box-shadow: inset 0px 0px 50px 80px #95a16c;
-    img {
-        border-radius: 20px;
-        width: 90%;
-        object-fit: contain;
-        -webkit-object-fit: contain;
-        -moz-object-fit: contain;
-        -o-object-fit: contain;
-
-    }   
-    
-    .productImg{
-        padding:1%;
-        display: grid;
-        grid-area: 1 / 1 / 8 / 2 ;
-        
-    }
-    
-    .productName{
-        padding:1%;
-        display: grid;
-        grid-area: 1 / 2 / 2 / 4 ;
-        text-align: left;
-        .productNameText{
-            font-size: 3vw;
-            padding-bottom: 2vw;
-        }
-    }
-    
-    .productDesc{
-        padding:1%;
-        display: grid;
-        grid-area: 3 / 2;
-        .productDescText{
-            font-size: 1.5vw;
-            word-spacing: 1.1px;
-        }
-    }
-    .productPrice{
-        padding:1%;
-        display: grid;
-        grid-area: 6 / 2;
-        text-align: right;
-        .productPriceText{
-            font-size: 2vw;
-            font-weight: 600;
-            
-        }
-
-    }
-    .productCat{
-        padding:1%;
-        display: grid;
-        grid-area: 2 / 2 ;
-        .productCatText{
-            font-size: 1.7vw;
-            font-weight: 600;
-        }
-    }
-
-    .productRating{
-        padding:1%;
-        display: grid;
-        padding-top: 1vw;
-        grid-area: 4 / 2 ;
-        .productRatingText{
-            font-size: 1.3vw;
-            font-weight: 600;
-        }
-        .productRatingStarts{
-            font-size: 2vw;
-            letter-spacing: 2px;
-        }
-    }
-    .productToCart{
-        background-color: #5F6F52;
-        color: white;
-        display: grid;
-        grid-area: 7 / 2 ;
-        width: 20%;
-        margin-left: 80%;
-        z-index: 10;
-        border-radius: 20px;
-        align-items: center;
-        margin-top: 1vw;
-
-    }
-    .addToCartText{
-        text-align: center;
-        font-size: 1.2vw;
-        font-family: Arial;
-        font-weight: 600;
-        padding: 1.5vw 0 1.5vw 0;
-    }
-    .productToCart:hover{
-        cursor: pointer;
-    }
-    .productAmount{
-        padding-top: 2vw;
-        padding:1%;
-        display: grid;
-        grid-area: 7 / 2;
-        justify-content: flex-start;
-        align-content: center;
-        align-items: center;
-        .productAmountText{
-            font-size: 1.3vw;
-            font-weight: 500;
-        }
-    }
-
-}
-.otherProductsText{
-    font-family: "Arial";
-    margin: 0 6vw 1vw 6vw;
-
-}
-.otherProductsItem{
-    flex-basis: 100%;
-}
-.otherProducts{
-    display: flex;
-    margin: 0 6vw 0 6vw;
-    gap: 1vw;
-    .otherProductsItem{
-    display: grid;
-
-	height: fit-content;
-	grid-template-columns: 90%;
-	grid-template-rows: 50% 10% 10% 10% 10%;
-	justify-content: space-evenly;
-	padding-top: 2%;
+.divnav {
+	display: flex;
+	flex-direction: row;
+	justify-content: left;
 	background-color: #dddada;
-	border-radius: 20px;
+	padding: 0.4vw;
+	font-family: Arial, Helvetica, sans-serif;
+	margin-bottom: 1%;
 
-    p{
-        margin: 1.5vw;
-    }
-	.divproduct_img {
-		overflow: hidden;
-		grid-row: 1;
-        height: 20vw;
-        width: 20vw;
-		img {
-			height: 20vw;
-			width: 20vw;
-            object-fit: cover;
-            margin-left: -2vw;
+	a {
+		color: black;
+		font-weight: 600;
+        text-decoration: none;
+	}
+}
+
+.divproduct1 {
+	display: grid;
+	grid-template-columns: 58% 38%;
+	background-color: #dddada;
+	padding: 2%;
+	margin: 0 2% 0 2%;
+	border-radius: 20px;
+	img {
+		border-radius: 20px;
+		width: 90%;
+		object-fit: contain;
+		-webkit-object-fit: contain;
+		-moz-object-fit: contain;
+		-o-object-fit: contain;
+	}
+
+	.productImg {
+		padding: 1%;
+		display: grid;
+		grid-area: 1 / 1 / 8 / 2;
+	}
+
+	.productName {
+		padding: 1%;
+		display: grid;
+		grid-area: 1 / 2 / 2 / 4;
+		text-align: left;
+		.productNameText {
+			font-size: 3vw;
+			padding-bottom: 2vw;
 		}
 	}
 
-	.divproduct_rating {
-		grid-row: 3;
-		text-align: center;
-    color: black;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 2vw;
-    font-style: normal;
-    font-weight: bolder;
-    line-height: normal;
-    
+	.productDesc {
+		padding: 1%;
+		display: grid;
+		grid-area: 3 / 2;
+		.productDescText {
+			font-size: 1.5vw;
+			word-spacing: 1.1px;
+		}
+	}
+	.productPrice {
+		padding: 1%;
+		display: grid;
+		grid-area: 6 / 2;
+		text-align: right;
+		.productPriceText {
+			font-size: 2vw;
+			font-weight: 600;
+		}
+	}
+	.productCat {
+		padding: 1%;
+		display: grid;
+		grid-area: 2 / 2;
+		.productCatText {
+			font-size: 1.7vw;
+			font-weight: 600;
+		}
 	}
 
-	.divproduct_name {
-		grid-row: 2;
-		text-align: center;
-		color: black;
-		font-weight: bold;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 20px;
-		font-style: normal;
-		font-weight: bolder;
-		line-height: normal;
+	.productRating {
+		padding: 1%;
+		display: grid;
+		padding-top: 1vw;
+		grid-area: 4 / 2;
+		.productRatingText {
+			font-size: 1.3vw;
+			font-weight: 600;
+		}
+		.productRatingStarts {
+			font-size: 2vw;
+			letter-spacing: 2px;
+		}
 	}
-
-	.divproduct_price {
-		grid-row: 4;
-		text-align: center;
-		color: black;
-		font-weight: bold;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 25px;
-		font-style: normal;
-		font-weight: bolder;
-		line-height: normal; 
-	}
-
-	.divproduct_add {
-		grid-row: 5;
+	.productToCart {
 		background-color: #5f6f52;
-		text-align: center;
-		border-radius: 20px;
 		color: white;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 18px;
-		font-style: normal;
-		font-weight: 400;
-		line-height: normal;
-        margin-top: 0vw;
-    }
+		display: grid;
+		grid-area: 7 / 2;
+		width: 20%;
+		margin-left: 80%;
+		z-index: 10;
+		border-radius: 20px;
+		align-items: center;
+		margin-top: 1vw;
+	}
+	.addToCartText {
+		text-align: center;
+		font-size: 1.2vw;
+		font-family: Arial;
+		font-weight: 600;
+		padding: 1.5vw 0 1.5vw 0;
+	}
+	.productToCart:hover {
+		cursor: pointer;
+	}
+	.productAmount {
+		padding-top: 2vw;
+		padding: 1%;
+		display: grid;
+		grid-area: 7 / 2;
+		justify-content: flex-start;
+		align-content: center;
+		align-items: center;
+		.productAmountText {
+			font-size: 1.3vw;
+			font-weight: 500;
+		}
+	}
 }
+.otherProductsText {
+	font-family: "Arial";
+	margin: 0 6vw 1vw 6vw;
+}
+.otherProductsItem {
+	flex-basis: 100%;
+}
+.otherProducts {
+	display: flex;
+	margin: 0 6vw 0 6vw;
+	gap: 1vw;
+	.otherProductsItem {
+		display: grid;
 
+		height: fit-content;
+		grid-template-columns: 90%;
+		grid-template-rows: 50% 10% 10% 10% 10%;
+		justify-content: space-evenly;
+		padding-top: 2%;
+		background-color: #dddada;
+		border-radius: 20px;
 
+		p {
+			margin: 1.5vw;
+		}
+		.divproduct_img {
+			overflow: hidden;
+			grid-row: 1;
+			height: 20vw;
+			width: 20vw;
+			img {
+				height: 20vw;
+				width: 20vw;
+				object-fit: cover;
+				margin-left: -2vw;
+			}
+		}
 
+		.divproduct_rating {
+			grid-row: 3;
+			text-align: center;
+			color: black;
+			font-weight: bold;
+			font-family: Arial, Helvetica, sans-serif;
+			font-size: 2vw;
+			font-style: normal;
+			font-weight: bolder;
+			line-height: normal;
+		}
 
+		.divproduct_name {
+			grid-row: 2;
+			text-align: center;
+			color: black;
+			font-weight: bold;
+			font-family: Arial, Helvetica, sans-serif;
+			font-size: 20px;
+			font-style: normal;
+			font-weight: bolder;
+			line-height: normal;
+		}
 
+		.divproduct_price {
+			grid-row: 4;
+			text-align: center;
+			color: black;
+			font-weight: bold;
+			font-family: Arial, Helvetica, sans-serif;
+			font-size: 25px;
+			font-style: normal;
+			font-weight: bolder;
+			line-height: normal;
+		}
+
+		.divproduct_add {
+			grid-row: 5;
+			background-color: #5f6f52;
+			text-align: center;
+			border-radius: 20px;
+			color: white;
+			font-family: Arial, Helvetica, sans-serif;
+			font-size: 18px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+			margin-top: 0vw;
+		}
+	}
 }
 @media only screen and (max-width: 1000px) {
-    .otherProducts{
-        flex-wrap: 2;
-    }
-
+	.otherProducts {
+		flex-wrap: 2;
+	}
 }
 
-
-@media only screen and (max-width: 500px) {
-    .divproduct1{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        zoom: 2;
-        .productName{
-            align-self: flex-start;
-        }
-        .productDesc, .productCat, .productRating, .productAmount, .productPrice{
-            align-self: flex-start;
-        }
-        .productToCart{
-            align-self: center;
-            margin-left: 0;
-        }
-
-    }
-    .divnav{
-        padding-left: 4vh;
-    }
-
+@media only screen and (max-width: 700px) {
+	.divproduct1 {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		zoom: 2;
+		.productName {
+			align-self: flex-start;
+		}
+		.productDesc,
+		.productCat,
+		.productRating,
+		.productAmount,
+		.productPrice {
+			align-self: flex-start;
+		}
+		.productToCart {
+			align-self: center;
+			margin-left: 0;
+		}
+	}
+	.divnav {
+		padding-left: 4vh;
+	}
 }
