--- a/frontend/src/pages/home_page/_category.scss
+++ b/frontend/src/pages/home_page/_category.scss
@@ -29,6 +29,11 @@
 	font-size: 18px;
 	font-style: normal;
 	font-family: Arial, Helvetica, sans-serif;
+	text-decoration: none;
+}
+
+.text1_kat:hover {
+	font-weight: bold;
 }
 
 @media only screen and (max-width: 700px) {
