--- a/frontend/src/pages/cart/_divs.scss
+++ b/frontend/src/pages/cart/_divs.scss
@@ -1,10 +1,9 @@
 .divcart {
-	background-color: gray;
 	display: flex;
 	flex-direction: column;
 }
 .cartitems {
-	background-color: aqua;
+	background-color: #dddada;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -71,18 +70,16 @@ img {
 }
 
 @media only screen and (min-width: 1201px) {
-	.divcart {
-		background-color: gray;
-		display: flex;
-		flex-direction: column;
-	}
 	.cartitems {
-		background-color: aqua;
+		background-color: #dddada;
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
 		width: 100%;
 		margin-top: 1%;
+		width: 98%;
+		align-self: center;
+		border-radius: 20px;
 
 		.cartimg {
 			width: 20%;
@@ -123,21 +120,6 @@ img {
 		}
 	}
 
-	.totalprice {
-		width: 100%;
-		margin-top: 1%;
-		text-align: right;
-	}
-
-	.nextbtn {
-		background-color: green;
-		display: flex;
-		justify-content: center;
-
-		width: 100px;
-		height: 50px;
-		margin-left: auto;
-	}
 	img {
 		border-radius: 20px;
 		width: 200px;
@@ -147,22 +129,53 @@ img {
 		-moz-object-fit: contain;
 		-o-object-fit: contain;
 	}
+
+
+	.nextbtn {
+		background-color: #5f6f52;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		justify-self: center;
+		text-align: center;
+		height: 60px;
+		width: 20%;
+		margin-left: auto;
+		margin-right: 1%;
+		margin-bottom: 2%;
+		border-radius: 20px;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 22px;
+		font-weight: bold;
+		color: white;
+		p {
+			margin-bottom: 0;
+		}
+	}
+
+	.totalprice {
+		width: 98%;
+		margin-top: 2%;
+		text-align: right;
+		p {
+			font-family: Arial, Helvetica, sans-serif;
+			font-size: 20px;
+			font-weight: bold;
+		}
+	}
 }
 
 @media only screen and (max-width: 1200px) {
-	.divcart {
-		background-color: gray;
-		display: flex;
-		flex-direction: column;
-	}
-
 	.cartitems {
-		background-color: aqua;
+		background-color: #dddada;
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
 		width: 100%;
 		margin-top: 1%;
+		width: 98%;
+		align-self: center;
+		border-radius: 20px;
 
 		.cartimg {
 			width: 20%;
@@ -203,16 +216,55 @@ img {
 		padding-right: 1%;
 		align-self: center;
 	}
+
+	.nextbtn {
+		background-color: #5f6f52;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		justify-self: center;
+		text-align: center;
+		height: 60px;
+		width: 20%;
+		margin-left: auto;
+		margin-right: 1%;
+		margin-bottom: 2%;
+		border-radius: 20px;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 22px;
+		font-weight: bold;
+		color: white;
+		p {
+			margin-bottom: 0;
+		}
+	}
+
+	.totalprice {
+		width: 98%;
+		margin-top: 2%;
+		text-align: right;
+		p {
+			font-family: Arial, Helvetica, sans-serif;
+			font-size: 20px;
+			font-weight: bold;
+		}
+	}
+
+
+
 }
 
 @media only screen and (max-width: 950px) {
 	.cartitems {
-		background-color: aqua;
+		background-color: #dddada;
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
 		width: 100%;
 		margin-top: 1%;
+		width: 98%;
+		align-self: center;
+		border-radius: 20px;
 
 		.cartimg {
 			width: 20%;
@@ -235,21 +287,57 @@ img {
 		.cartprice {
 			width: 25%;
 		}
+
+	}
+
+	.nextbtn {
+		background-color: #5f6f52;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		justify-self: center;
+		text-align: center;
+		height: 60px;
+		width: 20%;
+		margin-left: auto;
+		margin-right: 1%;
+		margin-bottom: 2%;
+		border-radius: 20px;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 22px;
+		font-weight: bold;
+		color: white;
+		p {
+			margin-bottom: 0;
+		}
+	}
+
+	.totalprice {
+		width: 98%;
+		margin-top: 2%;
+		text-align: right;
+		p {
+			font-family: Arial, Helvetica, sans-serif;
+			font-size: 20px;
+			font-weight: bold;
+		}
 	}
 }
 
 @media only screen and (max-width: 650px) {
 	.cartitems {
-		background-color: aqua;
+		background-color: #dddada;
 		display: flex;
 		flex-direction: column;
 		flex-wrap: wrap;
-		width: 100%;
+		width: 95%;
+		align-self: center;
+		border-radius: 20px;
 		margin-top: 2%;
 
 		.cartimg {
-            width: fit-content;
-            padding-left: 0%;
+			width: fit-content;
+			padding-left: 0%;
 			padding-top: 1%;
 			padding-bottom: 2%;
 			align-self: center;
@@ -258,8 +346,8 @@ img {
 		}
 
 		.cartname {
-            width: fit-content;
-            margin-left: 0;
+			width: fit-content;
+			margin-left: 0;
 			align-self: center;
 		}
 
@@ -278,14 +366,54 @@ img {
 		.cartdelete {
 			width: fit-content;
 			align-self: center;
-            margin-left: 0;
+			margin-left: 0;
 		}
 
 		.cartprice {
 			width: fit-content;
 			text-align: center;
 			align-self: center;
-            padding-right: 0;
+			padding-right: 0;
+		}
+	}
+	.totalprice {
+		width: 100%;
+		margin-top: 2%;
+		text-align: center;
+	}
+
+	.nextbtn {
+		background-color: #5f6f52;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		justify-self: center;
+		text-align: center;
+		height: 60px;
+		width: 95%;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 2%;
+		border-radius: 20px;
+		text-align: center;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: 22px;
+		font-weight: bold;
+		color: white;
+		p {
+			margin-bottom: 0;
+		}
+	}
+
+	.totalprice {
+		width: 100%;
+		margin-top: 2%;
+		text-align: right;
+		p {
+			text-align: center;
+			font-family: Arial, Helvetica, sans-serif;
+			font-size: 20px;
+			font-weight: bold;
 		}
 	}
 }
