--- a/frontend/src/components/navbar/_searchbar.scss
+++ b/frontend/src/components/navbar/_searchbar.scss
@@ -72,3 +72,9 @@
 .nav-item{
   padding-left: 2vw;
 }
+
+
+.btn-outline-success{
+  --bs-btn-active-border-color: #848b6a;
+  --bs-btn-active-bg:#848b6a;
+}
