--- a/frontend/src/pages/login/_div.scss
+++ b/frontend/src/pages/login/_div.scss
@@ -11,7 +11,6 @@
 
   border-radius: 50px;
   background: #e0e0e0;
-  box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
 
   align-items: flex-start;
   > a {
@@ -58,7 +57,7 @@
     border-radius: 20px;
     background: #d9d9d9;
     width: 350px;
-    height: 520px;
+    height: 550px;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
@@ -66,7 +65,6 @@
 
     border-radius: 50px;
     background: #e0e0e0;
-    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
 
     align-items: flex-start;
     > a {
@@ -109,11 +107,11 @@
 
 @media only screen and (max-width: 480px) {
   .Tabulka_1_log {
-    padding: 50px;
+    padding: 5%;
     border-radius: 20px;
     background: #d9d9d9;
     width: 200px;
-    height: 480px;
+    height: 550px;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
@@ -121,7 +119,6 @@
 
     border-radius: 50px;
     background: #e0e0e0;
-    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
 
     align-items: flex-start;
     > a {
