--- a/frontend/src/pages/login/_nadpisy.scss
+++ b/frontend/src/pages/login/_nadpisy.scss
@@ -1,4 +1,5 @@
 .Nadpis_Stranky1_log {
+  margin-top: 2%;
   color: #000;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -16,6 +17,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-decoration: none;
 }
 
 .Nadpis_Stranky3_log {
@@ -26,6 +28,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-decoration: none;
 }
 
 @media only screen and (max-width: 640px) {
