--- a/frontend/src/pages/login/_texty.scss
+++ b/frontend/src/pages/login/_texty.scss
@@ -48,6 +48,7 @@
     justify-content: center;
     margin-bottom: 20px;
     margin-top: 10px;
+    height: fit-content;
   }
   .text2_log {
     color: #000;
