--- a/frontend/src/pages/password_reset/_nadpisy.scss
+++ b/frontend/src/pages/password_reset/_nadpisy.scss
@@ -1,4 +1,5 @@
 .Nadpis_Stranky1_res {
+  margin-top: 2%;
   color: #000;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -16,6 +17,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-decoration: none;
 }
 
 .Nadpis_Stranky3_res {
@@ -26,6 +28,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-decoration: none;
 }
 
 @media only screen and (max-width: 640px) {
@@ -79,9 +82,6 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-bottom: 0px !important;
-    margin-top: -30px !important;
-    margin-left: 0px !important;
   }
 
   .Nadpis_Stranky3_res {
