--- a/frontend/src/pages/products/single_product/_text.scss
+++ b/frontend/src/pages/products/single_product/_text.scss
@@ -4,40 +4,37 @@
 }
 
 .productNameText{
-    font-family: Inter;
   color: #000;
-  font-size: 28px;
+  font-size: 40px;
   font-style: normal;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
 
 .productDescText{
-    font-family: Inter;
   color: #000;
-  font-size: 16px;
+  font-size: 22px;
   font-style: normal;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .productPriceText{
-    font-family: Inter;
   color: #000;
-  font-size: 18px;
+  font-size: 32px;
   font-style: normal;
+  font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .productCatText{
-    font-family: Inter;
   color: #000;
-  font-size: 18px;
+  font-size: 20px;
   font-style: normal;
+  font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .productAmountText{
-    font-family: Inter;
   color: #000;
   font-size: 18px;
   font-style: normal;
@@ -45,7 +42,6 @@
 }
 
 .productRatingText{
-    font-family: Inter;
   color: #000;
   font-size: 18px;
   font-style: normal;
@@ -53,10 +49,16 @@
 }
 
 .productStatText{
-    
-    font-family: Inter;
   color: #000;
   font-size: 18px;
   font-style: normal;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.addToCartText {
+		text-align: center;
+		font-size: 18px;
+		font-family: Arial;
+		font-weight: bold;
+		padding: 1.5vw 0 1.5vw 0;
+	}
