--- a/frontend/src/pages/registration/_nadpisy.scss
+++ b/frontend/src/pages/registration/_nadpisy.scss
@@ -1,4 +1,5 @@
 .Nadpis_Stranky1_reg {
+  margin-top: 2%;
   position: relative;
   color: #000;
   text-align: center;
@@ -9,7 +10,7 @@
   line-height: normal;
 }
 
-.Nadpis_Stranky2_reg {
+.nnadpis_Stranky2_reg {
   color: #000;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -18,9 +19,10 @@
   font-weight: 400;
   line-height: normal;
   margin-left: 20px;
+  text-decoration: none;
 }
 
-.Nadpis_Stranky2_reg {
+.nnadpis_Stranky2_reg {
   position: inherit;
   margin-top: -100px;
 }
@@ -33,6 +35,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  text-decoration: none;
 }
 
 @media only screen and (max-width: 1700px) {
