--- a/frontend/src/pages/registration/_div.scss
+++ b/frontend/src/pages/registration/_div.scss
@@ -3,7 +3,7 @@
 	border-radius: 20px;
 	background: #d9d9d9;
 	width: 1600px;
-	height: 850px;
+	height: 900px;
 	flex-shrink: 0;
 	display: flex;
 	flex-direction: column;
@@ -31,7 +31,7 @@
 	margin-bottom: 20px;
 }
 
-.loginbutton_reg {
+.loginbuttonn_reg {
 	margin-bottom: 20px;
 	margin-top: 20px;
 	width: 100%;
@@ -75,7 +75,7 @@
 		border-radius: 20px;
 		background: #d9d9d9;
 		width: 800px;
-		height: 850px;
+		height: 900px;
 		flex-shrink: 0;
 		display: flex;
 		flex-direction: column;
@@ -105,7 +105,7 @@
 		margin-bottom: 20px;
 	}
 
-	.loginbutton_reg {
+	.loginbuttonn_reg {
 		margin-bottom: 20px;
 		margin-top: 20px;
 		width: 100%;
@@ -137,7 +137,7 @@
 		margin: 20px;
 	}
 
-	.loginbutton_reg {
+	.loginbuttonn_reg {
 		margin-top: 0px !important;
 		width: 500px !important;
 		align-self: center;
@@ -150,7 +150,7 @@
 		border-radius: 20px;
 		background: #d9d9d9;
 		width: 290px;
-		height: 1350px;
+		height: 1600px;
 		flex-shrink: 0;
 		display: flex;
 		flex-direction: column;
@@ -180,10 +180,10 @@
 		margin-bottom: 20px;
 	}
 
-	.loginbutton_reg {
+	.loginbuttonn_reg {
 		margin-bottom: 20px;
 		margin-top: 100px !important;
-		width: 100%;
+		width: 90%;
 		height: 45px;
 		border-radius: 20px;
 		color: #e6e6e6;
@@ -212,9 +212,13 @@
 		margin: -10px;
 	}
 
-	.loginbutton_reg {
+	.loginbuttonn_reg {
 		margin-top: 50px !important;
-		width: 290px !important;
+		width: 240px !important;
 		align-self: center;
+	}
+	.nnadpis_Stranky2_reg {
+		position: inherit;
+		margin-top: -200px;
 	}
 }
