--- a/frontend/src/pages/usersettings/_style.scss
+++ b/frontend/src/pages/usersettings/_style.scss
@@ -1,3 +1,13 @@
+.uil-pen{
+    cursor: pointer;
+}
+
+.userInput{
+    border: none;
+    width: fit-content;
+    background-color: transparent;
+}
+
 .nadpis{
     margin: auto;
     width: 90%;
