--- a/backend/email_templates/new_product.handlebars
+++ b/backend/email_templates/new_product.handlebars
@@ -23,7 +23,9 @@
 			text-align: center; }
 		</style>
 
-		<p> Novy Produkt </p>
+		<h1>Dobrý den!</H1>
+		<h2>Na naší stránku Dárky z pedigu byl přidán nový produkt!</h2>
+		<h2>Můžete se na něj podívat na odkazu</h2>
 
 		<div class="center">
 			<img src="{{URL}}" alt="product" />
