--- a/backend/email_templates/password_reset.handlebars
+++ b/backend/email_templates/password_reset.handlebars
@@ -23,7 +23,7 @@
 			text-align: center; }
 		</style>
 
-		<p>Klikni zde aby jsi změnil heslo </p>
+		<h1>Klikni zde pro změnu hesla</h1>
 
 		<div class="center">
 			<a style="text-decoration:none" class="button" href="{{URL}}">Změnit</a>
