--- a/backend/email_templates/verification.handlebars
+++ b/backend/email_templates/verification.handlebars
@@ -23,7 +23,7 @@
 			text-align: center; }
 		</style>
 
-		<p>Klikni sem aby jsi se ověřil/a </p>
+		<p>Klikni zde aby jsi se ověřil/a</p>
 
 		<div class="center">
 			<a style="text-decoration:none" class="button" href="{{URL}}">Ověřit</a>
